doc: Java 17 用の設定を追記 (#152)
* doc: Java 17 用の設定を追記

* doc: Java 17 と Java 11 での依存関係の設定の違いを明記